SET(TARGET_OUTPUT_PATH "${EXECUTABLE_OUTPUT_PATH}/simplecontactnonblock")

SET(SERVER_FILES 
    simpleServer.c)
SET(SERVER_TARGET simpleContactNonblockServer)
ADD_EXECUTABLE(${SERVER_TARGET} ${SERVER_FILES})
SET_TARGET_PROPERTIES(
    ${SERVER_TARGET} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${TARGET_OUTPUT_PATH}")

SET(CLIENT_FILES
    simpleClient.c)
SET(CLIENT_TARGET simpleContactNonblockClient)
ADD_EXECUTABLE(${CLIENT_TARGET} ${CLIENT_FILES})
SET_TARGET_PROPERTIES(
    ${CLIENT_TARGET} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${TARGET_OUTPUT_PATH}")
